Fix currency transfer overflowing dialog in some cases

--- a/less/apps.less
+++ b/less/apps.less
@@ -1323,6 +1323,7 @@
     }
     label:nth-child(3) {
       text-align: left;
+      flex: 1;
     }
   }
 }
